--- a/lab_final/.vscode/tasks.json
+++ b/lab_final/.vscode/tasks.json
@@ -13,8 +13,8 @@
 				"${workspaceFolder}/connmgr.c",
 				"${workspaceFolder}/datamgr.c",
 				"${workspaceFolder}/sensor_db.c",
-				"${workspaceFolder}/logger.c",
 				"${workspaceFolder}/lib/tcpsock.c",
+				"${workspaceFolder}/lib/dplist.c",
 				"-o",
 				"${workspaceFolder}/build/out.exe",
 				"-Werror",
