--- a/plab5finalproject/.vscode/tasks.json
+++ b/plab5finalproject/.vscode/tasks.json
@@ -15,7 +15,7 @@
 				"${workspaceFolder}/sensor_db.c",
 				"${workspaceFolder}/lib/tcpsock.c",
 				"-o",
-				"${workspaceFolder}/build/out.exe",
+				"${workspaceFolder}/build/out",
 				"-Werror",
 			],
 			"options": {
