--- a/plab5finalproject/.vscode/launch.json
+++ b/plab5finalproject/.vscode/launch.json
@@ -12,7 +12,7 @@
             "args": [
                 "5678"
             ],
-            "stopAtEntry": true,
+            "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
             "externalConsole": false,
