--- a/lab_final/.vscode/tasks.json
+++ b/lab_final/.vscode/tasks.json
@@ -17,7 +17,7 @@
 				"${workspaceFolder}/lib/dplist.c",
 				"-o",
 				"${workspaceFolder}/build/out.exe",
-				"-Werror",
+				"-Werror"
 			],
 			"options": {
 				"cwd": "${fileDirname}"
