--- a/plab5finalproject/.vscode/tasks.json
+++ b/plab5finalproject/.vscode/tasks.json
@@ -16,7 +16,10 @@
 				"${workspaceFolder}/lib/tcpsock.c",
 				"-o",
 				"${workspaceFolder}/build/out",
-				"-Werror",
+				"-DSET_MIN_TEMP=10",
+				"-DSET_MAX_TEMP=20",
+				"-DTIMEOUT=5",
+				"-Werror"
 			],
 			"options": {
 				"cwd": "${fileDirname}"
