--- a/plab5finalproject/.vscode/tasks.json
+++ b/plab5finalproject/.vscode/tasks.json
@@ -20,7 +20,8 @@
 				"-DSET_MIN_TEMP=10",
 				"-DSET_MAX_TEMP=20",
 				"-DTIMEOUT=5",
-				"-Werror"
+				"-Werror",
+				"-lpthread",
 			],
 			"options": {
 				"cwd": "${fileDirname}"
