--- a/plab5finalproject/.vscode/settings.json
+++ b/plab5finalproject/.vscode/settings.json
@@ -9,7 +9,9 @@
         "sbuffer.h": "c",
         "stdlib.h": "c",
         "string.h": "c",
-        "errno.h": "c"
+        "errno.h": "c",
+        "config.h": "c",
+        "dplist.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
