--- a/plab3connmgr/.vscode/launch.json
+++ b/plab3connmgr/.vscode/launch.json
@@ -8,9 +8,9 @@
             "name": "(gdb) Launch - server",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/build/server.exe",
+            "program": "${workspaceFolder}/server",
             "args": [],
-            "stopAtEntry": true,
+            "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
             "externalConsole": false,
