--- a/plab5finalproject/.vscode/settings.json
+++ b/plab5finalproject/.vscode/settings.json
@@ -12,7 +12,8 @@
         "errno.h": "c",
         "config.h": "c",
         "dplist.h": "c",
-        "datamgr.h": "c"
+        "datamgr.h": "c",
+        "sensor_db.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
