--- a/plab5finalproject/.vscode/launch.json
+++ b/plab5finalproject/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Run_Server",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/server",
+            "program": "${workspaceFolder}/sensor_gateway",
             "args": [
                 "5678"
             ],
@@ -31,30 +31,6 @@
                 {
                     "description": "Set follow-fork-mode to parent",
                     "text": "-gdb-set follow-fork-mode parent"
-                }
-            ]
-        },
-        {
-            "name": "Attach",
-            "type": "cppdbg",
-            "request": "attach",
-            "program": "${workspaceFolder}/server",
-            "processId": "${command:pickProcess}",
-            "MIMode": "gdb",
-            "setupCommands": [
-                {
-                    "description": "Enable pretty-printing for gdb",
-                    "text": "-enable-pretty-printing",
-                    "ignoreFailures": true
-                },
-                {
-                    "description": "Set Disassembly Flavor to Intel",
-                    "text": "-gdb-set disassembly-flavor intel",
-                    "ignoreFailures": true
-                },
-                {
-                    "description": "Set follow-fork-mode to child",
-                    "text": "-gdb-set follow-fork-mode child"
                 }
             ]
         }
